// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SavingIndicator should hide immediately if saving for more than one second 1`] = `
<SavingIndicator__AnimatedSection
  aria-hidden={false}
  isSaving={true}
  timerRunning={true}
>
  <SavingIndicator__Icon
    src="icon-saving.svg"
  />
  Saving...
</SavingIndicator__AnimatedSection>
`;

exports[`SavingIndicator should hide immediately if saving for more than one second 2`] = `
<SavingIndicator__AnimatedSection
  aria-hidden={false}
  isSaving={true}
  timerRunning={true}
>
  <SavingIndicator__Icon
    src="icon-saving.svg"
  />
  Saving...
</SavingIndicator__AnimatedSection>
`;

exports[`SavingIndicator should hide immediately if saving for more than one second 3`] = `
<SavingIndicator__AnimatedSection
  aria-hidden={true}
  isSaving={false}
  timerRunning={false}
>
  <SavingIndicator__Icon
    src="icon-saving.svg"
  />
  Saving...
</SavingIndicator__AnimatedSection>
`;

exports[`SavingIndicator should render when starting saving 1`] = `
<SavingIndicator__AnimatedSection
  aria-hidden={false}
  isSaving={true}
  timerRunning={true}
>
  <SavingIndicator__Icon
    src="icon-saving.svg"
  />
  Saving...
</SavingIndicator__AnimatedSection>
`;

exports[`SavingIndicator should show spinner for at least one second 1`] = `
.c0 {
  color: #4A4A4A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: hidden;
  position: absolute;
  right: 1em;
  top: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0;
  -webkit-transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  opacity: 1;
  visibility: visible;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.c1 {
  margin-right: 0.5em;
  display: inline-block;
  -webkit-animation: fTgkMB 3s linear infinite;
  animation: fTgkMB 3s linear infinite;
}

<UnconnectedSavingIndicator
  isSaving={true}
  minDisplayTime={1000}
>
  <SavingIndicator__AnimatedSection
    aria-hidden={false}
    isSaving={true}
    timerRunning={true}
  >
    <div
      aria-hidden={false}
      className="c0"
    >
      <SavingIndicator__Icon
        src="icon-saving.svg"
      >
        <img
          className="c1"
          src="icon-saving.svg"
        />
      </SavingIndicator__Icon>
      Saving...
    </div>
  </SavingIndicator__AnimatedSection>
</UnconnectedSavingIndicator>
`;

exports[`SavingIndicator should show spinner for at least one second 2`] = `
.c0 {
  color: #4A4A4A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: hidden;
  position: absolute;
  right: 1em;
  top: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0;
  -webkit-transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  opacity: 1;
  visibility: visible;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.c1 {
  margin-right: 0.5em;
  display: inline-block;
  -webkit-animation: fTgkMB 3s linear infinite;
  animation: fTgkMB 3s linear infinite;
}

<UnconnectedSavingIndicator
  isSaving={false}
  minDisplayTime={1000}
>
  <SavingIndicator__AnimatedSection
    aria-hidden={false}
    isSaving={false}
    timerRunning={true}
  >
    <div
      aria-hidden={false}
      className="c0"
    >
      <SavingIndicator__Icon
        src="icon-saving.svg"
      >
        <img
          className="c1"
          src="icon-saving.svg"
        />
      </SavingIndicator__Icon>
      Saving...
    </div>
  </SavingIndicator__AnimatedSection>
</UnconnectedSavingIndicator>
`;

exports[`SavingIndicator should show spinner for at least one second 3`] = `
.c0 {
  color: #4A4A4A;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  visibility: hidden;
  position: absolute;
  right: 1em;
  top: 1em;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  opacity: 0;
  -webkit-transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  transition: visibility 0s linear 0.5s,opacity 250ms ease-in-out;
  opacity: 1;
  visibility: visible;
  -webkit-transition-delay: 0s;
  transition-delay: 0s;
}

.c1 {
  margin-right: 0.5em;
  display: inline-block;
  -webkit-animation: fTgkMB 3s linear infinite;
  animation: fTgkMB 3s linear infinite;
}

<UnconnectedSavingIndicator
  isSaving={false}
  minDisplayTime={1000}
>
  <SavingIndicator__AnimatedSection
    aria-hidden={false}
    isSaving={false}
    timerRunning={true}
  >
    <div
      aria-hidden={false}
      className="c0"
    >
      <SavingIndicator__Icon
        src="icon-saving.svg"
      >
        <img
          className="c1"
          src="icon-saving.svg"
        />
      </SavingIndicator__Icon>
      Saving...
    </div>
  </SavingIndicator__AnimatedSection>
</UnconnectedSavingIndicator>
`;
